samples/_failures_safe/1761592441_33c1d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e29b2e6.c: In function ‘main’:
./samples/SAFE/__tmp_4e29b2e6.c:147:16: error: missing terminating " character
  147 |         printf("Processing rate: %.2
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e29b2e6.c:147:9: error: expected expression at end of input
  147 |         printf("Processing rate: %.2
      |         ^~~~~~
./samples/SAFE/__tmp_4e29b2e6.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e29b2e6.c:147:9: error: expected declaration or statement at end of input
